Fixed the extra space in word and reflection and song detail pages

--- a/web/app/user/sass/components/_detailsLayout.scss
+++ b/web/app/user/sass/components/_detailsLayout.scss
@@ -8,7 +8,7 @@
     }
     .no-pardah {
         background: none;
-        min-height: 120px;
+        min-height: 120px !important;
     }
     .author-name {
         color: $pink;
