--- a/web/app/user/sass/pages/_reflectionsDetail.scss
+++ b/web/app/user/sass/pages/_reflectionsDetail.scss
@@ -29,7 +29,7 @@
 
     }
     .main-content .detail-text-wrapper {
-        margin: 160px auto;
+        margin: 130px auto;
         background-size: 100% 100%;
         margin-bottom: 0px;
 
